# pytest-tipsi-testing

./: .coveragerc  .editorconfig  .gitignore  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yml
pytest_tipsi_testing/: plugin.py
tests/: test_finalization.py  test_log_requests.py  test_scopes.py  test_vprint.py
tests/nesting/: conftest.py
tests/nesting/sub/: conftest.py  test_finish.py
