[project]
name = 'pytest-tipsi-testing'
dynamic = ["version"]
description = 'Better fixtures management. Various helpers'
readme = "README.rst"
authors = [
  { name = 'cybergrind', email = 'cybergind+pypi@gmail.com' }
]
keywords = ['testing', 'asyncio']
dependencies = [
  'pytest>=3.3.0',
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Software Development',
  'Topic :: Software Development :: Libraries',
  'Topic :: Utilities',
]

[project.urls]
github = 'https://github.com/tipsi/pytest-tipsi-testing'

[project.optional-dependencies]
log_requests = ['requests~=2.18.0']
test = ['coverage', 'pytests']

[tool.hatch.version]
path = "pytest_tipsi_testing/__init__.py"

[build-system]
requires = ['setuptools', 'wheel', 'hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build]
exclude = [
  '.*',
  '.gitignore',
  'tox.ini',
  'tests'
]

[tool.hatch.commands]
prerelease = 'hatch build'


[tool.ruff]
line-length = 100
select = [
  "E",     # pycodestyle
  "F",     # pyflakes
  "I",     # isort
  "G",     # flake8-logging-format
  "ASYNC", # flake8-async
  "PIE",   # flake8-pie
  "T20",   # flake8-print
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
]
ignore = [
  "Q001",
  "Q003"
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ['snapshot_manager']
lines-after-imports = 2

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"
